# cluster-setup

./: .gitignore  CLAUDE.md  README.md  TODO  adduser-interactive.yaml  ansible.cfg  bootstrap.yaml  hosts  inventory-ojasson.yaml  inventory-pgiaccone.yaml  inventory-zhihaow.yaml  inventory.yaml  p4-sde.yaml  p4tenant-cli  sde.yaml  users.yaml  vm.yaml
.claude/commands/: fix-issue.md  label-issue.md
.github/workflows/: claude.yml  issue-deduplication.yml  issue-handle-fix.yml  (+2 more)
docker/: .dockerignore  BUILD.md  Dockerfile  README.md  SUMMARY.md  docker-compose.yml  docker-test.sh  install-agentize.sh  setup-claude.sh
group_vars/: all.yaml  p4switches.yaml  servers.yaml  vms.yaml
host_vars/: rest-bfsw01.yaml  rest-bfsw02.yaml  restsrv01-smartdata01.yaml  restsrv01-smartdata02.yaml  restsrv01.yaml  restvm-dauin-01.yaml  restvm-mamanj-01.yaml  restvm-mspina-01.yaml  restvm-mspina-02.yaml  restvm-ojasson-01.yaml
p4tenant/: README.md  pyproject.toml
p4tenant/src/p4tenant/: __init__.py  cli.py  config.py  inventory.py  ip_allocator.py  tenant.py  ui.py
p4tenant/src/p4tenant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
playbooks/: README.md  adduser.yaml  bootstrap-tofino.yaml  bootstrap-vms.yaml  debian-kvm-p4dev-vm.yaml  debian-kvm-p4sde.yaml  install-reservation-webapp.yaml  kvm-bridged-and-sriov-net.yaml  kvm-bridged-only.yaml  kvm-sriov-net.yaml  p4dev-bootstrap-srv.yaml  p4dev-bootstrap-tofino.yaml  p4dev-bootstrap-vms.yaml  p4dev-bootstrap.yaml  p4dev-vm-bootstrap.yaml  removeuser.yaml  update-dashboard.yml
(+50 files in other folders)
